Some small styling changes such as modals hidden behind nav, button colors, gotit button size (still has a bug with the text)

--- a/client/hcomp/tutorial.css
+++ b/client/hcomp/tutorial.css
@@ -104,6 +104,7 @@
     right: 1em;
     border-radius: 5px;
     padding: 5px;
+    height: 2em;
 }
 #control-tutorial-ideaEntryTry-gotit:enabled {
     background-color: #7ED321;
@@ -203,6 +204,7 @@
     right: 0;
     border-radius: 5px;
     padding: 5px;
+    height: 2em;
 }
 #treatment-tutorial-ideaEntryTry-gotit:enabled {
     background-color: #7ED321;
@@ -223,6 +225,8 @@
     right: 0;
     border-radius: 5px;
     padding: 5px;
+    height: 1.5em;
+    height: 1.5em;
 }
 
 #treatment-tutorial-inspireMeTry-gotit:enabled {
